--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,14 @@
 <resources>
     <string name="app_name">NutriWatch</string>
+    <!-- Array de días de la semana -->
+        <string-array name="days_of_week_array">
+            <item>Lunes</item>
+            <item>Martes</item>
+            <item>Miércoles</item>
+            <item>Jueves</item>
+            <item>Viernes</item>
+            <item>Sábado</item>
+            <item>Domingo</item>
+        </string-array>
 
 </resources>
